--- a/UI/src/dashboard/reservation/reservation.scss
+++ b/UI/src/dashboard/reservation/reservation.scss
@@ -51,7 +51,7 @@
             justify-content: center;
             align-items: center;
             font-family: $font-primary;
-            padding: 10px 10px 5px 10px;
+            padding: 5px 10px 5px 10px;
             .fillcircle, .circle{
                 color: #efa430;
                 display: flex;
@@ -160,7 +160,8 @@
 
             .confirmlist{
                 width: 380px;
-                max-height: 90px;
+                // max-height: 90px;
+                max-height: 129px;
                 box-sizing: border-box;
                 overflow-y: auto;
                 margin: auto;
