move_existing_menu_icon

--- a/UI/src/dashboard/menuBar/menuBar.scss
+++ b/UI/src/dashboard/menuBar/menuBar.scss
@@ -28,6 +28,9 @@
             font-family: $font-primary;
             font-size: 14px;
         }
+        .exist{
+            padding-left: 1px; 
+        }
     }
     .menu1:hover{
         background-color: rgba(10, 13, 20,0.8);
