updated search hit ui and help ui

--- a/UI/src/dashboard/help/help.scss
+++ b/UI/src/dashboard/help/help.scss
@@ -93,6 +93,9 @@
             width: 100%;
             font-size: 9pt;
             display: flex;
+            .spaceCenter{
+                width: 24px;
+            }
             .data{
                 display: flex;
                 flex-direction: column;
