--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -153,6 +153,7 @@
                     margin-right: 1px;
                     text-align: right;
                     opacity: 0.5;
+                    box-sizing : 'border-box';
                 }
                 .inputradio::-webkit-input-placeholder{
                     color: #000000;
