--- a/UI/src/dashboard/reservationBar/card.scss
+++ b/UI/src/dashboard/reservationBar/card.scss
@@ -45,6 +45,29 @@
             top: 3px;
         }
     }
+    .chartIcon1{
+        position: absolute;
+        left: -5px;
+        top: 109px;
+    }
+    .chartIcon2{
+        position: absolute;
+        right: -5px;
+        top: 109px;
+    }
+    .chartIcon1:hover,.chartIcon2:hover{
+        cursor: pointer;
+    }
+    .disbleChart{
+        display: none;
+    }
+    .visibleChart{
+        visibility: hidden;
+    }
+    .visibleChart2{
+        visibility: hidden;
+        margin-right: 18px;
+    }
     .data{
         padding-left: 5px;
         padding-right: 5px;
