add event to calendar icon

--- a/UI/src/dashboard/history/history.scss
+++ b/UI/src/dashboard/history/history.scss
@@ -293,6 +293,9 @@
                                 width: 16px;
                                 top: 8px;
                             }
+                            .icon:hover{
+                                cursor: pointer;
+                            }
                         }
                         .hinttext{
                             font-size: 8pt;
