--- a/UI/src/dashboard/reservation/reservation.scss
+++ b/UI/src/dashboard/reservation/reservation.scss
@@ -259,6 +259,9 @@
                         width: 16px;
                         top: 22px;
                     }
+                    .icon:hover{
+                         cursor: pointer;
+                    }
                     .siteblock{
                         display: flex;
                         justify-content: center;
