--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -94,6 +94,9 @@
                         width: 16px;
                         top: 22px;
                     }
+                    .icon:hover{
+                        cursor: pointer;
+                    }
                     .unittext{
                         opacity: 0.5;
                         cursor: default;
