--- a/UI/src/dashboard/menuBar/menuBar.scss
+++ b/UI/src/dashboard/menuBar/menuBar.scss
@@ -6,14 +6,14 @@
     position: absolute;
     top: 48px;
     bottom: 0;
-    height: 212px;
+    height: 250px;
     width: 40px;
     background-color: $bg-overlay-primary;
     z-index: 1;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 1px rgba(10, 13, 20, 0.7);
-    .menu1,.menu2,.menu3,.menu4,.menu5{
+    .menu1,.menu2,.menu3,.menu4,.menu5,.menu6{
         padding-top: 5px;
         padding-bottom: 5px;
         padding-left: 8px;
@@ -59,6 +59,12 @@
     .menu5:hover{
         background-color: rgba(10, 13, 20,0.8);
         width: 90px;
+        border-bottom-right-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    .menu6:hover{
+        background-color: rgba(10, 13, 20,0.8);
+        width: 120px;
         border-bottom-right-radius: 5px;
         border-top-right-radius: 5px;
     }
