--- a/UI/src/dashboard/settings/resource.scss
+++ b/UI/src/dashboard/settings/resource.scss
@@ -7,12 +7,14 @@
   flex-direction: column;
   font-family: $font-primary;
   height: 100%;
+  background-color: #293043;
   .content{
     display: flex;
     flex-direction: column;
     margin: 10px;
     width: calc(100% - 20px);
     height: 100%;
+    overflow: scroll;
     .top{
       display: flex;
       justify-content: center;
@@ -42,9 +44,9 @@
         width: 89%;
       }
       .time{
-        margin-top: 10px;
+        margin-top: 3px;
         color: #EFA430;
-        font-size: 20pt;
+        font-size: 18pt;
       }
       .date{
         margin-top: 5px;
