--- a/UI/src/dashboard/settings/resource.scss
+++ b/UI/src/dashboard/settings/resource.scss
@@ -15,6 +15,19 @@
     width: calc(100% - 20px);
     height: 100%;
     overflow: scroll;
+    .input{
+            background-color: #464a5f;
+            border-radius: 3px;
+            padding-right: 5px;
+            padding-left: 5px;
+            outline: none;
+            border: none;
+            height: 20px;
+            margin-top: 5px;
+            color: #FFFFFF;
+    }
+
+
     .top{
       display: flex;
       justify-content: center;
@@ -46,7 +59,7 @@
       .time{
         margin-top: 3px;
         color: #EFA430;
-        font-size: 18pt;
+        font-size: 13pt;
       }
       .date{
         margin-top: 5px;
