fix function move from search to searchContainer

--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -277,6 +277,7 @@
                     line-height: 1.6; 
                     .siteName{
                         padding: 15px 0px 1 5px 0px;
+                        font-size: 15px;
                         .region{
                             font-size: 8px;
                             color: #90ACB1;
