update search click only show site card

--- a/UI/src/dashboard/login/login.scss
+++ b/UI/src/dashboard/login/login.scss
@@ -126,8 +126,7 @@
             box-sizing: border-box;
             font-family: $font-primary;
             font-size: 9pt;
-            // background-color: rgba(73,8,9,0.43);
-            background-color: #490809;
+            background-color: #4e090a;
             text-align: center;
             padding: 5px;
             color: #FFFFFF;
