--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -45,7 +45,7 @@
             box-sizing: border-box;
             font-family: $font-primary;
             font-size: 9pt;
-            background-color: #490809;
+            background-color: #b10000;
             text-align: center;
             padding: 5px;
             color: #FFFFFF;
