--- a/UI/src/dashboard/login/login.scss
+++ b/UI/src/dashboard/login/login.scss
@@ -32,7 +32,7 @@
             font-family: $font-primary;
             font-size: 9pt;
             // background-color: rgba(73,8,9,0.43);
-            background-color: #490809;
+            background-color: #b10000;
             text-align: center;
             padding: 5px;
             color: #FFFFFF;
